product_docs/docs/pgd/6.5/tiered-storage/index.mdx
---
title: Using tiered storage
navTitle: Using tiered storage
description: Understand how writing Postgres data to lakehouse tables enables cost-efficient data lifecycle management
deepToC: true
navigation:
- initial-config
- tiered-tables
- replicate
- offload
redirects:
  - /pgd/latest/tiered-storage/
---

PGD supports tiered storage through integration with the [Postgres Analytics Accelerator (PGAA)](/pgaa/latest/), a vectorized query engine and cloud-native storage extension for Postgres. PGAA manages data in object storage using columnar formats like Apache Iceberg® or Delta Lake, and exposes it as a queryable Postgres table, with no ETL pipelines required.

Together, PGD and PGAA manage the complete data lifecycle within a unified architecture, creating two distinct storage tiers:

- Hot tier (PGD): Local PostgreSQL storage for current operational data requiring sub-millisecond latency and full ACID compliance.
- Cold tier (PGAA): Cost-effective object storage using columnar formats like Apache Iceberg® or Delta Lake, optimized for high-speed analytical queries.

Together, they allow you to seamlessly transition data from high-performance transactional storage to a cost-effective data lake, all while maintaining transparent access through a unified Postgres interface. This architecture supports a variety of high-impact use cases:

  - **Regulatory compliance:** Offload aged data and audit trails to maintain lean, high-performance systems while ensuring long-term retention.
  - **Time-series & IoT:** Balance real-time dashboards using hot recent data with cost-effective cold historical analytics for sensor and event streams.
  - **Financial services:** Manage massive volumes of required historical transaction records without inflating transactional storage costs.
  - **Retail & seasonal business cycles**: Use adaptive policies to keep peak-season order data hot for customer service while tiering older records to cold storage.

## Understanding table types

This architecture implements two distinct storage tiers: the hot tier (local SSD, sub-millisecond latency) and the cold tier (object storage, columnar format). Data exists in one of the following three distinct table types:

| Table type | Storage location |  Behavior | 
| ---------- | --------------- |  -------- | 
| Heap | Local disk only | Standard transactional table in the hot tier. |
| Hybrid Transactional and Analytics Processing (HTAP) | Local + object storage | A heap table mapped to an analytical copy. PGD replicates all changes in near real-time. |
| PGAA | Object storage only | A purely analytical cold table, available in the Delta or Iceberg format. |

!!! Warning
Don't rename an HTAP or PGAA table, or the schema that contains it, no matter which tiering method created it. PGD tracks these tables by name in `bdr.analytics_table`, so renaming interrupts synchronization with the object storage copy and can leave stale or duplicate data behind.
!!!

## Tiered storage strategies

There are three available methods to transition data between tiers based on your operational needs.

### Implementing tiered tables

This method leverages **PGD AutoPartition** to automate the lifecycle of high-volume data. A heap table is transformed into a partitioned structure where:
  - **Hot partitions:** Recent data remains as heap (or HTAP if `enable_replication` is enabled) for active processing.
  - **Cold partition:** Once partitions cross an age threshold, PGD bulk-copies them to object storage, converts them to PGAA tables, and reclaims local disk space, maintaining the data queryable.

### Replicating to analytics

This method continuously synchronizes a table with an analytical copy in object storage. A heap table is converted into an HTAP table. To the user, it appears as a standard transactional table, but an analytical copy is maintained in the background.

To ensure near real-time synchronization without taxing your transactional throughput, PGAA uses Iceberg Merge-on-Read (MoR). This records changes in small "delete files" rather than rewriting entire data blocks, keeping the data lake fresh with minimal overhead.

### Offloading to analytics

This method offers a one-time, surgical way to immediately reclaim local disk space for HTAP tables, leaving only the copy in object storage (PGAA table). The local heap copy is truncated, and the table access method is altered to `PGAA`, which now points to object storage.

If you need to bring your data back for transactional writes, you can restore the table back from object storage into the local Postgres heap.

Method | Purpose | Use case | Origin Table | Destination table 
----------|-----------------------------|---------------- | ----- | -------
Tiered tables | Automated <br />lifecycle management | High-volume time-series<br /> data where historical retention<br /> is critical and automated. | Heap | Heap or HTAP (hot)<br /> PGAA (cold)
Replication | Continuous <br />synchronization | Replicating a transactional table<br /> in near real-time for general analytics. | Heap | HTAP 
Offload | Selective<br /> archiving | One-time, surgical removal and<br /> archival of a specific table. | HTAP | PGAA


## Metadata management

PGAA supports two methods for managing object store metadata when integrating with PGD:

- **No-catalog offload**: Store metadata alongside data files using [storage locations](/pgaa/latest/read_no_catalog/) to connect directly to object storage. Local filesystem storage locations aren't supported for this method in multi-node PGD deployments. Use a shared object storage provider (S3, GCS, or Azure).
- **Catalog-managed offload**: Decouple data from the metadata [using a centralized catalog service](/pgaa/latest/catalog) like Iceberg REST. 
